# yapb-cli

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: authentication.rs  get_paste.rs  main.rs
sdk/: Cargo.toml
src/: auth.rs  get_paste.rs  login.rs  main.rs  new_paste.rs  paste.rs  subcommands.rs
