[package]
name = "yapb"
version = "0.1.0"
authors = ["Matthew Palmer <mspalmer91@gmail.com>"]
edition = "2018"
description = "Yet Another Paste Bin CLI utility"
license = "Apache-2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
clap = "2.33.0"
reqwest = "0.9.19"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
dirs = "2.0.2"
